# poem-next

./: Cargo.toml  README.md
examples/: demo.rs
src/: endpoint.rs  error.rs  lib.rs
src/chapter/: mod.rs  path.rs
src/middleware/: after.rs  before.rs  mod.rs  set_header.rs
src/middleware/auth/: bearer.rs  error.rs  mod.rs
