[package]
name = "poem-next"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "0.4"

# 错误处理
anyhow = "1"
thiserror = "1"

async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1.10.0", features = ["rt-multi-thread", "macros"] }
